--- a/vercel.json
+++ b/vercel.json
@@ -6,4 +6,11 @@
   "routes": [
     { "src": "/(.*)", "dest": "server.js" }
   ]
+},
+{
+  "functions": {
+    "api/upload.js": {
+      "maxDuration": 30
+    }
+  }
 }
