--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "headers": [
     {
-      "source": "/",
+      "source": "/:path*",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
