--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ JWT_SECRET = hello
 CLOUDINARY_CLOUD_NAME =dczulxzko
 CLOUDINARY_API_KEY =575516827762966
 CLOUDINARY_API_SECRET =iMKQnxQgl8O6-83xERsejc8qbiQ
+CLOUDINARY_UPLOAD_PRESET =ml_default
