--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ CLOUDINARY_CLOUD_NAME =dczulxzko
 CLOUDINARY_API_KEY =575516827762966
 CLOUDINARY_API_SECRET =iMKQnxQgl8O6-83xERsejc8qbiQ
 CLOUDINARY_UPLOAD_PRESET =Cops
+Google_Gemini_API="AIzaSyDwduC5DYRNBlGCwbTofvPfXUHSl3gORZY"
+
+Google_Search_API =AIzaSyB86LvsxAErM9zmHS5cTAesX0xHnZMpG18
+Google_CX_ID =82633a19ccf594804
