--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "google-trends-api": "^4.10.0",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.3",
