--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "multer-storage-cloudinary": "^4.0.0",
     "google-trends-api": "^4.9.2",
     "nodemon": "^3.1.9",
+    "node-appwrite": "^17.0.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.3",
     "vercel": "^28.18.5",
+    "multer": "^2.0.1",
     "@google/genai": "^0.8.0",
     "@google/generative-ai": "^0.24.0"
   }
