--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cloudinary": "^1.41.3",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
+    "fluent-ffmpeg": "^2.1.2",
+    "@ffmpeg-installer/ffmpeg": "^1.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "glob": "^11.0.0",
