--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 JWT_SECRET = hello
 
-CLOUDINARY_CLOUD_NAME =dczulxzko
-CLOUDINARY_API_KEY =575516827762966
-CLOUDINARY_API_SECRET =iMKQnxQgl8O6-83xERsejc8qbiQ
+CLOUDINARY_CLOUD_NAME =difoiicrt
+CLOUDINARY_API_KEY =997428256181613
+CLOUDINARY_API_SECRET =Umi7cXDZkZkYw9Nm90LQrP3hc4I
 CLOUDINARY_UPLOAD_PRESET =Cops
 Google_Gemini_API="AIzaSyDwduC5DYRNBlGCwbTofvPfXUHSl3gORZY"
 
