--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+"{
   "name": "express",
   "version": "1.0.0",
   "description": "",
@@ -8,33 +8,35 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.687.0",
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "axios": "^1.7.9",
+    "aws-sdk": "^2.1560.0",
+    aws-sdk/client-s3
     "body-parser": "^1.20.3",
-    "cheerio": "^1.0.0",
     "cloudinary": "^1.41.3",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
+    "fluent-ffmpeg": "^2.1.2",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "fluent-ffmpeg": "^2.1.2",
     "glob": "^11.0.0",
-    "google-trends-api": "^4.9.2",
     "jsonwebtoken": "^9.0.2",
     "lru-cache": "^11.0.2",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "node-appwrite": "^17.0.0",
+    "google-trends-api": "^4.9.2",
     "nodemon": "^3.1.9",
+    "node-appwrite": "^17.0.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.3",
     "vercel": "^28.18.5",
-    "@google/generative-ai": "^0.24.0"
+    "multer": "^2.0.1",
+    "@google/genai": "^0.8.0"," fix it bro for above 💯 code 
+    "@
+google/generative-ai": "^0.24.0"
   }
 }
