--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "aws-sdk": "^2.1560.0",
-   
+    
+   "@aws-sdk/client-s3": "^3.420.0",
     "body-parser": "^1.20.3",
     "cloudinary": "^1.41.3",
     "cheerio": "^1.0.0",
