--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    
+    "bcryptjs": "^3.0.3",
    "@aws-sdk/client-s3": "^3.420.0",
     "body-parser": "^1.20.3",
     "cloudinary": "^1.41.3",
