--- a/.env
+++ b/.env
@@ -24,3 +24,5 @@ R2_SECRET_ACCESS_KEY=acc60cb0808fbc29d039ece731a5c47f1a86867b34d1f88129d9d55caaf
 R2_ACCOUNT_ID=75b064f26736fd36c2014c12d7109e29
 R2_BUCKET_NAME=fondpeace-bucket
 R2_PUBLIC_DOMAIN=pub-fe2880e50b8a49beb15457c1336be948.r2.dev
+
+MONGODB=mongodb+srv://pratikkumar5750:mheekd9tSQqWF3ui@cluster0.x12xsyl.mongodb.net/?appName=Cluster0
